update to be promise wrapper

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promisehandler",
+  "name": "promise-wrapper",
   "version": "1.0.0",
   "description": "A small utility to allow cleaner promise handling",
   "main": "index.js",
