--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   ],
   "author": "evanb54",
   "license": "ISC",
+  "repo": {
+    "type": "git",
+    "url": "https://github.com/EvanBurbidge/await-wrapper.git"
+  },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
